[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
base58 = "0.2.0"
bip32 = "0.5.1"
bip39 = "2.0.0"
clap = { version = "4.5.7", features = ["derive"] }
hdpath = "0.6.3"
hex = "0.4.3"
rand_core = { version = "0.6.4", features = ["std"] }
ripemd = "0.1.3"
sha256 = "1.5.0"
